portfolio seciton update

--- a/src/templates/pages/capabilities/implementation.html
+++ b/src/templates/pages/capabilities/implementation.html
@@ -1,13 +1,8 @@
 ---
 title: Implementation
 description: Site Design and Build
-attribution: Work done at Raskyl
 last-edit: 5.30.19
 back-url: /work/all
-team:
--
-  name: Kyle Langford
-  title: Designer, Drupal Developer
 ---
 
 {{> header}}
@@ -17,7 +12,7 @@ team:
     <div class="column two-thirds">
       <article class="content">
 
-        <p>Frontend Site Implementation</p>
+        <p>Site Examples</p>
 
         <div class="specimen">
           <img
@@ -64,44 +59,40 @@ team:
           <div class="caption">Design, Drupal Development</div>
         </div>
 
-        <div class="split stretch">
-          <div class="specimen">
-            <img
-              src="../assets/img/projects/hle/ibx.jpg"
-              alt="Elephant at sunset"
-              class="paper"
-            />
-            <div class="caption">Sketch of Idea</div>
-          </div>
-
-          <div class="specimen">
-            <img
-              src="../assets/img/projects/blink/home.jpg"
-              alt="Elephant at sunset"
-              class="paper"
-            />
-            <div class="caption">This is the Homepage</div>
-          </div>
+        <div class="specimen">
+          <img
+            src="../assets/img/projects/hle/ibx.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">Sketch of Idea</div>
         </div>
 
-        <div class="split stretch">
-          <div class="specimen">
-            <img
-              src="../assets/img/projects/enelx/product-map.jpg"
-              alt="Elephant at sunset"
-              class="paper"
-            />
-            <div class="caption">Sketch of Idea</div>
-          </div>
+        <div class="specimen">
+          <img
+            src="../assets/img/projects/blink/home.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">Site Design and Development</div>
+        </div>
 
-          <div class="specimen">
-            <img
-              src="../assets/img/projects/enelx/calculator.jpg"
-              alt="Elephant at sunset"
-              class="paper"
-            />
-            <div class="caption">This is the Homepage</div>
-          </div>
+        <div class="specimen">
+          <img
+            src="../assets/img/projects/enelx/product-map.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">Sketch of Idea</div>
+        </div>
+
+        <div class="specimen">
+          <img
+            src="../assets/img/projects/enelx/calculator.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">This is the Homepage</div>
         </div>
 
         {{> credits}}
