--- a/src/templates/pages/capabilities/info.html
+++ b/src/templates/pages/capabilities/info.html
@@ -1,6 +1,6 @@
 ---
-title: Information Architecture
-description: Content and Wayfinding
+title: Info Arch
+description: Content and Wayfinding Examples
 last-edit: 5.30.19
 back-url: /work/all
 ---
