--- a/src/templates/pages/capabilities/layout.html
+++ b/src/templates/pages/capabilities/layout.html
@@ -1,16 +1,8 @@
 ---
 title: Page Layout 
-description: Site Design and Build
-attribution: Work done at Raskyl
+description: Wireframing Examples
 last-edit: 5.30.19
 back-url: /work/all
-team:
--
-  name: Kyle Langford
-  title: Designer, Drupal Developer
--
-  name: Rachel Sorkin
-  title: Designer
 ---
 
 {{> header}}
