--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -9,13 +9,16 @@ description: My name is Kyle Langford, and this is my Web Design and Development
   <div class="row flex flex-align--center flex--justify fill-height">
     <!-- 1.0 - Intro Name -->
     <div class="column half text--center">
-      <img
+     <!--  <img
         src="assets/img/svg/laptop.svg"
         class="title-image"
-      />
+      /> -->
       <h1 class="page__title">Kyle Langford</h1>
       <h2 class="page__sub-title">Web Design and Development</h2>
       <p class="description">Boston, MA</p>
+
+      <!-- Currently at ACLU — ➀ working on the 2020 elections, ➁ making tools for organizers, and ➂ ?????. -->
+
     </div>
   </div>
 </header>
@@ -36,7 +39,7 @@ description: My name is Kyle Langford, and this is my Web Design and Development
 
     <figure class="image">
       <img
-        src="assets/img/svg/graphic_design.svg"
+        src="assets/img/svg/laptop.svg"
         class="icon-image position-bottom-right"
       />
     </figure>
