--- a/src/templates/pages/work/all.html
+++ b/src/templates/pages/work/all.html
@@ -11,7 +11,7 @@ work:
   href: /work/cpl
 -
   title: Drizly
-  description: Prodcut Design, AngularJS Development
+  description: Product Design, AngularJS Development
   href: /work/drizly
 -
   title: Elev8d Fitness
@@ -19,30 +19,12 @@ work:
   href: /work/fitnessapp
 -
   title: Healthy Living Engine (HLE)
-  description: Frontend Development, APP/Drupal Development, UX Design
+  description: Frontend Development, Drupal Development, UX Design
   href: /work/hle
 -
   title: Princeton Alumni Magazine
   description: UX Design, Drupal Development
   href: /work/paw
-capabilities:
--
-  title: Implementation
-  description: Lorem Ipsum
-  href: /capabilities/implementation
--
-  title: Page Layout
-  description: Lorem Ipsum
-  href: /capabilities/layout
--
-  title: Information Architecture
-  description: Lorem Ipsum
-  href: /capabilities/info
--
-  title: Moodboards
-  description: Lorem Ipsum
-  href: /capabilities/moodboards
-
 ---
 
 <header class="container size-to-window portfolio">
@@ -59,26 +41,6 @@ capabilities:
 <main class="container">
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
-
-      <h3 class="list-title animate fade-in">Capabilities</h3>
-
-      <ul class="list portfolio">
-        {{#each capabilities}}
-          <li class="list__item animate fade-in">
-            <article class="view--teaser">
-              <a href="{{ this.href }}">
-                <span class="label">{{ this.title }}</span>
-                <p>
-                  {{ this.description }}
-                </p>
-              </a>
-            </article>
-          </li>
-        {{/each}}
-      </ul>
-
-      <br>
-      <br>
 
       <h3 class="list-title animate fade-in">Best Work</h3>
 
