--- a/src/templates/pages/work/brm.html
+++ b/src/templates/pages/work/brm.html
@@ -1,8 +1,8 @@
 ---
 title: Bally Ribbon Mills
-description: Site Design and Build
+description: Site Design and Drupal Development
 attribution: Work done at Brunello, Inc.
-last-edit: 5.30.19
+last-edit: 10.31.19
 back-url: /work/all
 team:   
 -
@@ -19,17 +19,23 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-        <h4>Narrow woven fabrics.</h4>
+
+        <div class="specimen stretch">
+          <img
+            src="../assets/img/projects/brm/device-mockup-feature.png"
+            alt="Elephant at sunset"
+          />
+
+          <div class="caption"></div>
+        </div> 
+
+        <h4>Drupal site design and development.</h4>
 
         <p>
-          One of my first design projects at Brunello was for a company that
-          produced narrow fabric and advanced composites for
-          industrial/military application. It was important for Bally to be
-          Modern and Authoritive. This design for Bally Ribbon Mills has
-          held up well over the years, even longer than the site itself!
-          This project used sitemaps, wireframes, style-tiles, and full-page
-          mockups. I built the site in Drupal 7.
+          Bally Ribbon Mills needed an authoritive and modern site that resonated with its niche market. The website needed to be customizable and easy to update. Drupal was a perfect solution for this content managed website. The design process used sitemaps, wireframes, style-tiles, and full-page mockups. Site was created with Druapl 7.
         </p>
+
+        <h5>Sitemap</h5>
 
         <div class="specimen stretch">
           <img
@@ -37,50 +43,63 @@ team:
             alt="Elephant at sunset"
             class="paper"
           />
-          <div class="caption">Final Sitemap</div>
         </div>
+
+        <h5>Wireframes</h5>
 
         <div class="specimen">
           <div class="stack">
-            <img
-            src="../assets/img/projects/brm/brm_tile-2.jpg"
-              alt="Elephant at sunset"
-            />
-            <img
-            src="../assets/img/projects/brm/brm_tile-1.jpg"
-              alt="Elephant at sunset"
-            />
-          </div>
-          <div class="caption"></div>
-        </div>
 
-
-        <div class="specimen text--center">
           <img
-            src="../assets/img/projects/brm/square-3.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-          />
-          <img
-            src="../assets/img/projects/brm/square-2.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-          />
-          <div class="caption"></div>
-        </div>
-
-        <div class="specimen">
-          <div class="stack">
-            <img
             src="../assets/img/projects/brm/brm-wires_page_1.png"
+            alt="Elephant at sunset"
+            class="paper"
+
+          />
+          <img
+            src="../assets/img/projects/brm/brm-wires_page_3.png"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          </div>
+        </div>
+
+        <h5>Moodboards</h5>
+
+        <div class="specimen">
+          <img
+            src="../assets/img/projects/brm/brm_tile-1.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption"></div> 
+        </div>
+
+        <div class="specimen">
+          <img
+            src="../assets/img/projects/brm/brm_tile-2.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption"></div>
+        </div>
+
+        <h5 style="text-align:center;">Logo Design</h5>
+
+        <div class="split">
+
+          <div class="specimen text--center">
+            <img
+              src="../assets/img/projects/brm/square-2.jpg"
               alt="Elephant at sunset"
+              class="paper"
             />
             <img
-            src="../assets/img/projects/brm/design-homepage_v3c.jpg"
+              src="../assets/img/projects/brm/square-3.jpg"
               alt="Elephant at sunset"
+              class="paper"
             />
           </div>
-          <div class="caption"></div>
         </div>
 
         {{> credits}}
