--- a/src/templates/pages/work/drizly.html
+++ b/src/templates/pages/work/drizly.html
@@ -19,57 +19,39 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-        <h4>Feature Design</h4>
-
-        <p>
-          <strong>Ask</strong>
-          Needed to display topics over a timeline...
-        </p>
-
-        <p>I was coding https://drizly.com/ emails for a while and noticed that a lot of the work was repetitive. I proposed that we design a library of blocks based on their existing emails. I boiled the emails down to 10 or so components. I designed a UI for arranging the blocks and populating them with content. This app would render the HTML in a preview panel and also allow you to export the generated HTML.</p>
 
         <div class="specimen stretch">
           <img
-            src="../assets/img/projects/drizly/drizly-app-projects.jpg"
+            src="../assets/img/projects/drizly/device-mockup-default.png"
             alt="Elephant at sunset"
-            class="paper"
           />
-          <div class="caption">Sketch of Idea</div>
         </div>
 
-        <p> If you click the settings wheel next to a project on the left it will load. The page collapses, but if you click projects at the bottom right it will reopen the left sidebar. Try changing some of the content on the right it renders instantly. The accordions match with the blocks in the preview. You can drag and drop the order in the preview window. The form above the preview lets you add blocks. Feel free to play around.</p>
+        <h4>Design and Generate HTML Emails</h4>
+
+        <p>I proposed that we design a library of blocks based on their existing emails. I boiled the emails down to 10 or so components. I designed a UI for arranging the blocks and populating them with content. This app would render the HTML in a preview panel and also allow you to export the generated HTML.</p>
+
+        <h5>Drag and Drag, Updates in Real Time</h5>
 
         <div class="specimen stretch">
           <img
-            src="../assets/img/projects/drizly/drizly-app-edit.jpg"
+            src="../assets/img/projects/drizly/device-mockup-project.png"
             alt="Elephant at sunset"
-            class="paper"
           />
-          <div class="caption">Design of Idea</div>
         </div>
 
-        <p>I like this project because I think this one has merit as a standalone product. The work to standardize their designs came out really nice. I also taught myself angularJS. If I had more time I would have made the right sidebar draggable, and made it so you could click and edit the preview directly.</p>
+        <h5 style="text-align: center;">Example Email</h5>
 
-        <div class="specimen stretch">
+        <div class="specimen">
           <img
-            src="../assets/img/projects/drizly/drizly-app-edit.jpg"
+            src="../assets/img/projects/drizly/email-drizly-CincoDeMayo-v1.jpg"
             alt="Elephant at sunset"
             class="paper"
           />
-          <div class="caption">Edit Mode</div>
         </div>
-
-<!--         <div class="button-group">
-          <a
-            href="https://drizly-app.kylelangford.com"
-            class="button button--primary"
-            target="_blank"
-            >View Demo</a
-          >
-          <p>*Note: some of the images are no longer hosted.</p>
-        </div> -->
 
         {{> credits}}
+
       </article>
     </div>
   </div>
