--- a/src/templates/pages/work/fitnessapp.html
+++ b/src/templates/pages/work/fitnessapp.html
@@ -25,37 +25,34 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-        <h4>HTML5 Video Magic</h4>
-
-        <p>
-          Elev8d Fitness app provided users with full-length video workouts
-          as well as guided video playlists. The original Angular build was
-          riddled with bugs and had a very confusing design. This was a
-          webview app so that presented a lot of challenges with video
-          playback. We were able to design a player that simplified the UI
-          and allowed seamless playing. I focused on transitions and
-          animation to give a more native app feel. This project was the
-          first time I had worked with Angular v5 and typescript which made
-          this challanging.
-        </p>
 
         <div class="specimen stretch">
           <img
-            src="../assets/img/projects/elev8d/video-player.jpg"
+            src="../assets/img/projects/elev8d/device-mockup-feature.png"
             alt="Elephant at sunset"
-            class="paper"
           />
-          <div class="caption">Redesigned Player.</div>
+          <!-- <div class="caption">Elev8ed App Player.</div> -->
         </div>
+
+        <h4>Angular Video Player</h4>
+
+        <p>
+          Elev8d Fitness app provided users with guided workout playlists
+          as well as full-length video workouts. This was a
+          webview app so that presented a lot of challenges with video
+          playback. We were able to design a player that simplified the UI
+          and allowed seamless playing. I focused on transitions and
+          animation to give a more native app feel. 
+        </p>
 
         <div class="specimen">
           <img
-            src="../assets/img/projects/elev8d/060-screenshot.jpg"
+            src="../assets/img/projects/elev8d/device-mockup-playlist.png"
             alt="Elephant at sunset"
-            class="paper"
           />
-          <div class="caption">Original Player.</div>
         </div>
+
+        <h5>Video Player Demo</h5>
 
         <div class="stretch">
 
