--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -1,6 +1,6 @@
 ---
 title: PAW
-description: Site Design and Build
+description: Site Design and Drupal Development
 attribution: Work done at Brunello, Inc.
 last-edit: 5.30.19
 back-url: /work/all
@@ -13,7 +13,7 @@ team:
   title: UI Designer
 -
   name: Kyle Langford
-  title: Designer, Front-End Developer
+  title: UI Designer, Front-End Developer
 -
   name: Mike Calebrese
   title: Drupal Developer
@@ -25,18 +25,16 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-        <h4>Content is King</h4>
 
-        <div class="specimen">
+        <div class="specimen stretch">
           <img
-            src="../assets/img/projects/paw/screenshot-2.jpg"
+            src="../assets/img/projects/paw/device-mockup-article.png"
             alt="Elephant at sunset"
-            class="paper"
           />
-          <div class="caption">Screenshot</div>
         </div>
 
-        <!-- Goals -->
+        <h4>Digital Magazine Publishing</h4>
+
         <p>
           My accomplishments for this project include crafting a process
           from research to development. I designed reusable components and
@@ -46,11 +44,7 @@ team:
           front-end production code, much of which was recycled from the
           prototype.
         </p>
-
-        <!-- Defining process -->
         
-        <!-- Design that mirrored development -->
-
         <div class="specimen">
           <img
             src="../assets/img/projects/paw/way-back.jpg"
@@ -63,10 +57,8 @@ team:
         </div>
 
         <p>
-          The current website was fixed width, dense, and packed with
-          content. We wanted to add more of the magazines editorial look and
-          feel to the online experience. It was also important to make the
-          site responsive and mobile-first.
+          <strong>We wanted to add more of the magazines editorial look and
+          feel to the online experience.</strong>
         </p>
 
         <div class="specimen text--center">
@@ -74,12 +66,11 @@ team:
             src="../assets/img/projects/paw/mag-cover.png"
             alt="Elephant at sunset"
             class="paper"
-            style="max-width: 50%;"
+            style="max-width: 60%;"
           />
-          <div class="caption">Issue #</div>
         </div>
 
-        <p>Visual Research</p>
+        <h5>Research Phase</h5>
 
         <div class="specimen">
           <img
@@ -99,37 +90,24 @@ team:
           <div class="caption">Inspiration Style Collage #2.</div>
         </div>
 
-        <p>
-          We started by breaking down the current site content. We wanted to
-          simplify the site navigation as much as possible while still
-          making content easy to find.
-        </p>
-
+        <h5>Sitemap</h5>
         <div class="specimen stretch">
           <img
             src="../assets/img/projects/paw/sitemap_v1.jpg"
             alt="Elephant at sunset"
             class="paper"
           />
-          <div class="caption">Near Final Sitemap.</div>
         </div>
 
+        <h5>Content Priority</h5>
         <div class="specimen stretch">
           <div class="stack">
-            <img
-              src="../assets/img/projects/paw/cpw-01.jpg"
-              alt="Elephant at sunset"
-            />
             <img
               src="../assets/img/projects/paw/cpw-04.jpg"
               alt="Elephant at sunset"
             />
             <img
               src="../assets/img/projects/paw/cpw-05.jpg"
-              alt="Elephant at sunset"
-            />
-            <img
-              src="../assets/img/projects/paw/cpw-06.jpg"
               alt="Elephant at sunset"
             />
           </div>
@@ -142,150 +120,54 @@ team:
           </div>
         </div>
 
-        <p>
-          Modular Design was important to the layout of this site. It was
-          important to our development process that the site was component
-          based. Building in this way allowed for greater efficiency and
-          added to the maintainability of the code.
+        <h5>Component Patterns</h5>
+
+         <p>
+          I wanted to allow flexibility in the feature list sections. No
+          matter the number of articles the presentation would always be
+          desirable.
         </p>
 
-        <p>Article List Arrangements</p>
         <div class="specimen">
           <img
-            src="../assets/img/projects/paw/list-blocks-mobile.jpg"
+            src="../assets/img/projects/paw/device-mockup-tablet.png"
             alt="Elephant at sunset"
-            class="paper"
+            style="width: 80%;"
           />
+        </div>
+
+
+        <div class="specimen">
           <img
             src="../assets/img/projects/paw/list-blocks.jpg"
             alt="Elephant at sunset"
             class="paper"
           />
-          <div class="caption">
-            I wanted to allow flexibility in the feature list sections. No
-            matter the number of articles the presentation would always be
-            desirable.
-          </div>
+ 
         </div>
 
-        <div class="specimen">
-          <img
-            src="../assets/img/projects/paw/content-grid.png"
-            alt="Elephant at sunset"
-            class="paper"
-          />
-          <div class="caption">Design produced by Jay Fournier.</div>
-        </div>
 
-        <p>
-          There were approx. 30 components on the site, only about a third
-          of those were accounted for in the initial wireframing process.
-          The rest I derived from common list style layouts I had created
-          previously.
-        </p>
-
-        <div class="specimen stretch text--center">
-          <div class="split">
-            <img
-              src="../assets/img/projects/paw/list-blocks-sidebar-mobile.jpg"
-              alt="Elephant at sunset"
-              class="paper"
-            />
-            <img
-              src="../assets/img/projects/paw/list-blocks-sidebar.jpg"
-              alt="Elephant at sunset"
-              class="paper"
-            />
-          </div>
-          <div class="caption">
-            Sidebar component, showing Desktop vs Mobile versions.
-          </div>
-        </div>
-
-        <p>
-          Producing phone, tablet, and desktop compositions for all pages
-          was time consuming. We had to create a reusable processes.
-        </p>
-
-        <p>Wireframes</p>
+        <h5>Wireframe Example</h5>
         <div class="specimen stretch">
-          <div class="stack">
-            <img
-              src="../assets/img/projects/paw/cpw-10.jpg"
-              alt="Elephant at sunset"
-            />
-            <img
-              src="../assets/img/projects/paw/cpw-11.jpg"
-              alt="Elephant at sunset"
-            />
-            <img
-              src="../assets/img/projects/paw/cpw-12.jpg"
-              alt="Elephant at sunset"
-            />
-            <img
-              src="../assets/img/projects/paw/cpw-13.jpg"
-              alt="Elephant at sunset"
-            />
-            <img
-              src="../assets/img/projects/paw/cpw-14.jpg"
-              alt="Elephant at sunset"
-            />
-            <img
-              src="../assets/img/projects/paw/cpw-15.jpg"
-              alt="Elephant at sunset"
-            />
-          </div>
+          <img
+            src="../assets/img/projects/paw/cpw-11.jpg"
+            alt="Elephant at sunset"
+          />
           <div class="caption"></div>
         </div>
 
-        <p>Article Page</p>
         <div class="specimen">
-          <div class="fake-browser-ui paper">
-            <div class="frame">
-                <span style="background-color: #FB625D;"></span>
-                <span style="background-color: #FDBD40;"></span>
-                <span style="background-color: #35CC4B;"></span>
-            </div>
-
-            <div class="scroll-box">
-              <img 
-                src="../assets/img/projects/paw/wireframe-rwd-article-page.png" 
-                alt="A nice description">
-            </div>
-          </div>
-          <div class="caption">Full Fidelity Wireframe</div>          
+          <img 
+            src="../assets/img/projects/paw/wireframe-rwd-article-page.png" 
+            alt="A nice description">
         </div>
 
-        <p>
-          My proposal was to only produce 5 wireframes at
-          phone/tablet/desktop. The rest of the site would be designed using
-          a components derived from those pages. The goal was to make a
-          fully working version of the site in html/css/js and show it to
-          the client. Changes would be incorporated directly into the
-          prototype speeding up our process. This would be a big departure
-          from what we had done in the past. Luckily the group at PAW was
-          supportive and interested in new ways of working.
-        </p>
-
+        <h5>HTML Prototype</h5>
         <p>
           I devised a simple template system that I used to create the
-          prototype. This made the process extremely managable and about
-          2000 lines of CSS were reused to start the production build. We
-          were able to show more pages at more screen sizes than we did
-          prevously. We ended with 41 pages made with approx 30 components
-          with about 100 variations.
-        </p>
+          prototype. We ended with 41 pages made with approx 30 components
+          with about 100 variations. Below is a working version of that prototype, follow the orange dots for active links.
 
-        <pre class="markup"><code class="language-html"> 
-$(elem).appendTo('.header-region').load("inc/header.html");
-      </code></pre>
-
-        <p>
-          The final designs were produced by Jay Fournier and the site was
-          built in Drupal 7 by Mike Calebrese. I did the front-end
-          development and consulted on site architecture. Below is a working
-          version of that prototype, follow the orange dots for active
-          links.
         </p>
 
         <div class="text--center button-group">
@@ -294,7 +176,6 @@ $(elem).appendTo('.header-region').load("inc/header.html");
             class="button button--primary"
             >View Prototype</a
           >
-          <a href="https://paw.princeton.edu" class="button">Live Site</a>
         </div>
 
         {{> credits}}
