--- a/src/templates/partials/nav.html
+++ b/src/templates/partials/nav.html
@@ -2,20 +2,14 @@
 <nav class="primary">
   <div class="container">
     <div class="knockout">
-      <!--  <ul class="menu">
+      <ul class="menu">
         <li class="list__item">
           <a href="/articles/all.html">Blog</a>
         </li>
         <li class="list__item">
           <a href="/work/all.html">Portfolio</a>
         </li>
-      </ul> -->
-
-      <p>
-        As for the value I bring to a project. I produce production ready code
-        that scales and is secure, outstanding communication, detailed
-        documentation and top notch support.
-      </p>
+      </ul>
     </div>
   </div>
 </nav>
