--- a/src/templates/pages/work/cpl.html
+++ b/src/templates/pages/work/cpl.html
@@ -19,6 +19,19 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
+
+        <div class="specimen stretch">
+          <img
+            src="../assets/img/projects/cpl/p-cpl.jpg"
+            style="width: 100%;"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">Reverse channel letters on canopy.</div>
+        </div>
+
+        <h4>Enviromental Signage.</h4>
+
         <p>
           This project was for the Cambridge Public Library with the
           addition of the modern wing. I worked as a project designer with
@@ -29,22 +42,13 @@ team:
 
         <div class="specimen">
           <img
-            src="../assets/img/projects/cpl/p-cpl.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-          />
-          <div class="caption">Reverse channel letters on canopy.</div>
-        </div>
-
-        <div class="specimen">
-          <img
             src="../assets/img/projects/cpl/156.jpg"
             alt="Elephant at sunset"
             class="paper"
           />
           <div class="caption">
             Large hanging signs in the hallway that separates the original
-            library and the recently created modern section.
+            library and the modern section.
           </div>
         </div>
 
@@ -59,10 +63,11 @@ team:
           </div>
         </div>
 
-        <div class="specimen">
+        <div class="specimen stretch">
           <img
             src="../assets/img/projects/cpl/182.jpg"
             alt="Elephant at sunset"
+            style="width: 100%;"
             class="paper"
           />
           <div class="caption">Large sign going up stairway.</div>
@@ -74,7 +79,7 @@ team:
             alt="Elephant at sunset"
             class="paper"
           />
-          <div class="caption">First floor directory</div>
+          <div class="caption">First floor directory.</div>
         </div>
 
         <div class="specimen">
@@ -83,14 +88,15 @@ team:
             alt="Elephant at sunset"
             class="paper"
           />
-          <div class="caption">Bathroom Sign</div>
+          <div class="caption">Restroom Sign.</div>
         </div>
 
-        <div class="specimen">
+        <div class="specimen stretch">
           <img
             src="../assets/img/projects/cpl/209.jpg"
             alt="Elephant at sunset"
             class="paper"
+            style="width: 100%;"
           />
           <div class="caption">Garage entrance</div>
         </div>
