--- a/src/templates/partials/masthead.html
+++ b/src/templates/partials/masthead.html
@@ -1,4 +1,24 @@
 <section class="mast-head">
-	<button class="primary-menu-btn">Need a Website?</button>
-	{{> nav}}
+	<button class="primary-menu-btn">About</button>
+
+	<div class="container">
+		<div class="knockout">
+			<p>
+				As for the value I bring to a project. I produce production ready code
+				that scales and is secure, outstanding communication, detailed
+				documentation and top notch support.
+			</p>
+
+			I am a frontend web developer, among other things. And I intend to write
+			about that work here, occasionally — recording some portion of what I
+			learn and think and do related to HTML, CSS, JavaScript, The Web Platform,
+			&c. About the Person My name is David Clark. Physically, I am located in
+			Tucson, Arizona; virtually, I can be found on Github and Twitter. (I guess
+			I’m also on LinkedIn.) And you can feel free to email me, if you’d like.
+			About the Site If you’re curious how I made this site, one of these days I
+			plan to write a little post about it. To summarize: Jekyll, Gulp, and
+			Rework. Some icons on the site were made by Yannick and Icons8 from
+			www.flaticon.com, licensed by CC BY 3.0.
+		</div>
+	</div>
 </section>
