--- a/src/templates/layouts/default.html
+++ b/src/templates/layouts/default.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="{{description}}"
+      content="{{meta_description}}"
     />
     <meta name="author" rel="me" content="Kyle Langford" />
 
-    <title>{{title}}</title>
+    <title>{{meta_title}}</title>
 
     <!-- Load Resources -->
     <link rel="icon" type="image/png" href="{{root}}/img/brand/favicon.png" />
