--- a/src/templates/pages/work/all.html
+++ b/src/templates/pages/work/all.html
@@ -1,5 +1,8 @@
 ---
-back-url: /
+meta_title: 'Portfolio | Kyle Langford'
+meta_description: 'A list of professional work'
+back_url: /
+back_text: $ cd ..
 work:   
 -
   title: Bally Ribbon Mills
@@ -18,7 +21,7 @@ work:
   description: UX Design, Angular Development.
   href: /work/fitnessapp
 -
-  title: Healthy Living Engine (HLE)
+  title: Healthy Living Engine
   description: Frontend Development, Drupal Development, UX Design
   href: /work/hle
 -
@@ -30,7 +33,7 @@ work:
 <header class="container size-to-window portfolio">
   <div class="row flex flex-align--center flex--justify fill-height">
     <nav class="position-top-left">
-      <a href="{{back-url}}" class="button--previous">$ cd ..</a>
+      <a href="{{back_url}}" class="button--previous">{{back_text}}</a>
     </nav>
     <div class="column two-thirds">
       <h1 class="page__title">Po<span class="kern-1">rtf</span>olio</h1>
