--- a/src/templates/pages/work/brm.html
+++ b/src/templates/pages/work/brm.html
@@ -1,4 +1,6 @@
 ---
+meta_title: 'BRM Site Design and Drupal Development | Kyle Langford'
+meta_description: 'Portfolio example for Bally Ribbon Mills site design and Drupal development project, work done at Brunello, Inc.'
 title: Bally Ribbon Mills
 description: Site Design and Drupal Development
 attribution: Work done at Brunello, Inc.
@@ -10,7 +12,7 @@ team:
   title: Project Manager
 - 
   name: Kyle Langford
-  title: Designer, Drupal Developer
+  title: UI Designer, Drupal Developer
 ---
 
 {{> header}}
