--- a/src/templates/pages/work/cpl.html
+++ b/src/templates/pages/work/cpl.html
@@ -1,4 +1,6 @@
 ---
+meta_title: 'Cambridge Public Library wayfinding and signage | Kyle Langford'
+meta_description: 'Portfolio example for the Cambridge Public Library wayfinding and signage project, work done at Wojciechowski Design.'
 title: Cambridge Public Library
 description: Wayfinding and Signage
 attribution: Work done at Wojciechowski Design
