--- a/src/templates/pages/work/drizly.html
+++ b/src/templates/pages/work/drizly.html
@@ -1,5 +1,7 @@
 ---
-title: Drizly 
+meta_title: 'Drizly Email Building Application | Kyle Langford'
+meta_description: 'Portfolio example for Drizly Email Building Web App, work done at Raskyl.'
+title: Drizly
 description: Email Building Web App
 attribution: Work done at Raskyl
 last-edit: 5.30.19
