--- a/src/templates/pages/work/fitnessapp.html
+++ b/src/templates/pages/work/fitnessapp.html
@@ -1,4 +1,6 @@
 ---
+meta_title: 'Elev8d Fitness Angular Video Component and Playlist | Kyle Langford'
+meta_description: 'Portfolio example for Elev8d Fitness Angular Video Component and Playlist project, work done at Brunello, Inc. '
 title: Elev8d Fitness
 attribution: Work done at Brunello, Inc.
 description: Angular Video Component and Playlist
