--- a/src/templates/pages/work/hle.html
+++ b/src/templates/pages/work/hle.html
@@ -1,4 +1,6 @@
 ---
+meta_title: 'HLE Design and Frontend Development | Kyle Langford'
+meta_description: ''
 title: Healthly Living Engine
 description: UI Design and Frontend Development
 attribution: Work done at Brunello, Inc.
