--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -1,4 +1,6 @@
 ---
+meta_title: 'PAW Design and Drupal Development | Kyle Langford'
+meta_description: 'Work by Kyle Langford on Princeton Alumni Weekly Magazine site design and development while at Brunello, inc'
 title: PAW
 description: Site Design and Drupal Development
 attribution: Work done at Brunello, Inc.
