--- a/src/scss/components/_article.scss
+++ b/src/scss/components/_article.scss
@@ -9,7 +9,7 @@ content-teaser
 
 article {
   width: 100%;
-  max-width: 700px;
+  // max-width: 700px;
   margin: 0px auto;
   position: relative;
 
