--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -1,24 +1,16 @@
 ---
-title: Web Design and Development | Kyle Langford
-description: My name is Kyle Langford, and this is my Web Design and Development portfolio.
+meta_title: Web Design and Development | Kyle Langford
+meta_description: My name is Kyle Langford, and this is my Web Design and Development portfolio.
 ---
 
 <!-- <canvas id='c'></canvas> -->
-
 <header class="container intro masthead">
   <div class="row flex flex-align--center flex--justify fill-height">
-    <!-- 1.0 - Intro Name -->
-    <div class="column half text--center">
-     <!--  <img
-        src="assets/img/svg/laptop.svg"
-        class="title-image"
-      /> -->
-      <h1 class="page__title">Kyle Langford</h1>
-      <h2 class="page__sub-title">Web Design and Development</h2>
-      <p class="description">Boston, MA</p>
-
-      <!-- Currently at ACLU — ➀ working on the 2020 elections, ➁ making tools for organizers, and ➂ ?????. -->
-
+    <div class="column two-thirds">
+      <div class="intro-message">
+        <h1 class="page__title">Kyle Langford</h1>
+        <h2 class="page__sub-title">&nbsp;Currently <span class="icons-at-sign"></span>Brunello <span class="icons-coffee"></span> Working on Drupal websites <span class="icons-droplet"></span> Web Design projects and frontend dev <span class="icons-zap"></span> located in Boston, MA<span class="icons-home"></span></h2>
+      </div>
     </div>
   </div>
 </header>
@@ -26,9 +18,6 @@ description: My name is Kyle Langford, and this is my Web Design and Development
 <section class="container size-to-window event--close-hint">
   <div class="row flex flex-align--center fill-height pad-default">
     <div class="column two-thirds animate fade-in">
-      <!-- 1.1 - Intro Description  -->
-      <h2 class="section__title">Experience(d) Design</h2>
-
       <p class="text--large">
         I am a Designer and Drupal Developer @Brunello, a Boston based agency specializing in
         Drupal. I have 10 years of professional experience and entrepreneurship in creating digital 
@@ -172,7 +161,11 @@ description: My name is Kyle Langford, and this is my Web Design and Development
     <!-- 5.2 - Locations -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Locations</p>
-      Boston, MA <br />
+      <ul class="pretty">
+        <li class="list__item">
+          Boston, MA
+        </li>
+      </ul>
     </div>
     <!-- 5.3 - Misc Links -->
     <div class="column one-fourth animate fade-in">
