--- a/src/templates/pages/bookmarks.html
+++ b/src/templates/pages/bookmarks.html
@@ -4,7 +4,7 @@
       <a href="/" class="button--previous">$ cd ..</a>
     </nav>
 
-    <div class="column half text--center">
+    <div class="column two-thirds">
       <h1 class="page__title">Bookmarks</h1>
       <p class="description">
         A curated list of links.
