--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -19,10 +19,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
   <div class="row flex flex-align--center fill-height pad-default">
     <div class="column two-thirds animate fade-in">
       <p class="text--large">
-        I am a Designer and Drupal Developer @Brunello, a Boston based agency specializing in
-        Drupal. I have 10 years of professional experience and entrepreneurship in creating digital 
-        experiences. I focus on designing easy to use interfaces and writing clean human-readable 
-        code. I am passionate about learning new skills and refining my processes. I have a positive attitude and enjoy bringing ideas to life.
+        My name is Kyle Langford I have 10 years of professional experience and entrepreneurship in creating digital experiences. I focus on designing easy to use interfaces and writing clean human-readable code. I am passionate about learning new skills and refining my process. I have a positive attitude and enjoy bringing ideas to life.
       </p>
     </div>
 
@@ -49,7 +46,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
       <p class="list-title">Interface Design</p>
       <ul class="pretty">
         <li>Information Architecture</li>
-        <li>Component Design Systems</li>
+        <li>Design Systems</li>
         <li>Responsive Web Design</li>
         <li>Page Layout</li>
       </ul>
@@ -121,7 +118,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         <li>Drupal CMS</li>
         <li>Node.js</li>
         <li>Shopify CMS</li>
-        <li>LAMP Stack</li>
+        <li>Web Hosting</li>
       </ul>
     </div>
   </div>
