--- a/src/templates/pages/work/all.html
+++ b/src/templates/pages/work/all.html
@@ -37,6 +37,9 @@ work:
     </nav>
     <div class="column two-thirds">
       <h1 class="page__title">Po<span class="kern-1">rtf</span>olio</h1>
+      <p class="description">
+        A curated collection of work examples.
+      </p>
     </div>
   </div>
 </header>
@@ -45,8 +48,7 @@ work:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
 
-      <h3 class="list-title animate fade-in">Best Work</h3>
-
+      <h3 class="list-title animate fade-in">Best Stuff</h3>
       <ul class="list portfolio">
         {{#each work}}
           <li class="list__item animate fade-in">
